src/objects/Tenant_s_Need__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Criteria__c</fullName>
        <label>Additional Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tenant&apos;s Needs</relationshipLabel>
        <relationshipName>Tenant_s_Needs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lease_Rate_Type__c</fullName>
        <label>Lease Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>AK-Anchorage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Birmingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Huntsville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Montgomery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-Fayetteville/Springdale/Rogers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-Fort Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-Little Rock/N Little Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ-Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ-Tucson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Bakersfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-East Bay/Oakland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Fresno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Inland Empire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Marin/Sonoma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Salinas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Luis Obispo/Paso Robles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Santa Barbara/Sta Maria/Goleta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Santa Cruz/Watsonville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-South Bay/San Jose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Stockton/Modesto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Visalia/Porterville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-Colorado Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT-Hartford</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Lease_Rate_SF__c</fullName>
        <label>Maximum Lease Rate ($/SF)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Square_Footage__c</fullName>
        <label>Maximum Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Lease_Rate__c</fullName>
        <label>Minimum Lease Rate ($/SF)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Square_Footage__c</fullName>
        <label>Minimum Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Need_Date__c</fullName>
        <inlineHelpText>When does the Tenant need the space by?</inlineHelpText>
        <label>Need Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Space_Sub_Type__c</fullName>
        <label>Space Sub-Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Flex Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Office Showroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Truck Terminal/Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Distribution Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial- Refrigerated/Cold Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Multifamily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land- Commercial(Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office- Creative/Loft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office- Office Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office- Governmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office- Medical Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office- R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Freestanding Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Retail (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Vehicle Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Pad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Anchor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Community Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Strip Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Specialty Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail- Neighborhood Center</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Space_Type__c</fullName>
        <label>Space Type</label>
        <picklist>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Purpose</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submarket__c</fullName>
        <label>Submarket</label>
        <picklist>
            <picklistValues>
                <fullName>Downtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uptown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southtown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <type>TextArea</type>
    </fields>
    <label>Tenant&apos;s Need</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Industrial</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Need_Date__c</columns>
        <columns>Market__c</columns>
        <columns>Submarket__c</columns>
        <columns>Maximum_Lease_Rate_SF__c</columns>
        <columns>Maximum_Square_Footage__c</columns>
        <columns>Minimum_Lease_Rate__c</columns>
        <columns>Minimum_Square_Footage__c</columns>
        <columns>Additional_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Space_Type__c</field>
            <operation>equals</operation>
            <value>Industrial</value>
        </filters>
        <label>Industrial</label>
    </listViews>
    <listViews>
        <fullName>Office</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Need_Date__c</columns>
        <columns>Market__c</columns>
        <columns>Submarket__c</columns>
        <columns>Maximum_Lease_Rate_SF__c</columns>
        <columns>Maximum_Square_Footage__c</columns>
        <columns>Minimum_Lease_Rate__c</columns>
        <columns>Minimum_Square_Footage__c</columns>
        <columns>Additional_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Space_Type__c</field>
            <operation>equals</operation>
            <value>Office</value>
        </filters>
        <label>Office</label>
    </listViews>
    <listViews>
        <fullName>Retail</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Need_Date__c</columns>
        <columns>Market__c</columns>
        <columns>Submarket__c</columns>
        <columns>Maximum_Lease_Rate_SF__c</columns>
        <columns>Maximum_Square_Footage__c</columns>
        <columns>Minimum_Lease_Rate__c</columns>
        <columns>Minimum_Square_Footage__c</columns>
        <columns>Additional_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Space_Type__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <label>Retail</label>
    </listViews>
    <nameField>
        <label>Tenant&apos;s Need Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tenant&apos;s Needs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>